Profile scroll improved and inNews layout show images correctly

--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/posts_item_layout"
     android:layout_width="match_parent"
-    android:paddingLeft="32dp"
-    android:paddingStart="32dp"
+    android:paddingLeft="10dp"
+    android:paddingStart="10dp"
     android:layout_margin="5dp"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     android:clickable="true"
-    android:paddingTop="31dp"
+    android:paddingTop="10dp"
     android:background="@android:color/white"
-    android:paddingEnd="32dp"
-    android:paddingBottom="32dp"
+    android:paddingEnd="10dp"
+    android:paddingBottom="10dp"
     android:orientation="vertical"
     android:layout_height="wrap_content"
     android:focusable="true">
@@ -58,24 +58,31 @@
         android:layout_marginTop="10dp"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="2dp"
+        android:background="#a9a9a9"/>
+
     <TextView
         android:id="@+id/creator_content_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
+        android:fontFamily="@font/lato"
         android:ellipsize="end"
-        android:lineSpacingExtra="1dp"
+        android:lineSpacingMultiplier="1.2"
         android:maxLines="4"
         android:text="Lorem ipsum dolor sit ame"/>
 
     <ImageView
         android:id="@+id/creator_content_image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:visibility="visible"
         android:src="@drawable/nature"
-        android:layout_marginTop="2dp"/>
+        android:layout_marginTop="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
