--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="fragments.ProfileFragment">
 
+    <ProgressBar
+        android:id="@+id/profile_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:layout_anchor="@+id/nestedScrollView"
+        app:layout_anchorGravity="bottom|center" />
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="290dp">
 
@@ -54,9 +63,10 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -66,46 +76,46 @@
 
             <LinearLayout
                 android:id="@+id/info_layout_temp"
-                android:background="@android:color/white"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/info_layout_temp1"
-                    android:background="@android:color/white"
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content">
+                    android:background="@android:color/white"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:textSize="18sp"
                         android:fontFamily="@font/roboto_medium"
-                        android:text="College Name :"/>
+                        android:gravity="center"
+                        android:text="College Name :"
+                        android:textSize="18sp" />
 
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textSize="18sp"
                         android:fontFamily="@font/roboto_medium"
                         android:gravity="center"
-                        android:text="Course Name :"/>
+                        android:text="Course Name :"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/info_layout"
-                    android:background="@android:color/white"
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/profile_college_name"
@@ -120,35 +130,31 @@
 
                     <TextView
                         android:id="@+id/profile_course_name"
-                        android:padding="10dp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/lato"
                         android:gravity="center"
-                        android:text="Bsc (Hons) Computer Science"/>
+                        android:padding="10dp"
+                        android:text="Bsc (Hons) Computer Science" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/profile_progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/personal_posts_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/info_layout_temp">
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_marginTop="100dp">
 
             </android.support.v7.widget.RecyclerView>
 
-        </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
