--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/profile_image"
                     app:layout_collapseMode="parallax"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_person_black_24dp"
+                    android:src="@drawable/ic_person_white_24dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
@@ -48,6 +48,7 @@
 
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/profile_toolbar"
                 android:layout_width="match_parent"
                 android:background="@android:color/transparent"
                 android:layout_height="?attr/actionBarSize"
@@ -65,10 +66,12 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
+        android:layout_below="@id/appbar_layout"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
+            android:id="@+id/profile_info_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -146,15 +149,15 @@
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/personal_posts_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="95dp"
+        android:layout_below="@id/nestedScrollView"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/personal_posts_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_marginTop="100dp">
-
-            </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>
 
 
 </android.support.design.widget.CoordinatorLayout>
