--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -32,6 +32,7 @@
         <TextView
             android:id="@+id/creator_name"
             android:layout_weight="1"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:text="Yash chaudhary"
             android:layout_height="wrap_content" />
