--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,16 +64,16 @@
 
         <Button
             android:id="@+id/login_btn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login"
+            android:layout_gravity="center_horizontal"
             android:transitionName="login-btn"
-            android:background="@drawable/round_edittext"
             android:backgroundTint="@color/AppColor"
             android:textColor="@android:color/white"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:layout_marginTop="51dp"/>
+            android:layout_marginTop="30dp"/>
 
         <ImageView
             android:layout_width="wrap_content"
