--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,14 @@
         <item name="queryHint">Search here...</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item
+            name="android:windowBackground">@drawable/splash</item>
+    </style>
+
+
 </resources>
